--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "typings": "index.d.ts",
     "dependencies": {},
     "devDependencies": {
-        "route-recognizer": "^0.3.3"
+        "route-recognizer": "^0.3.3",
+        "typescript": "^2.5.3"
     },
     "peerDependencies": {}
 }
