--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "typings": "index.d.ts",
     "dependencies": {},
     "devDependencies": {
+        "@types/rsvp": "^3.3.3",
         "route-recognizer": "^0.3.3",
         "typescript": "^2.5.3"
     },
